frontend/test/should_fail/computations_decl_use_calls_arguments_mismatch_006.grg
procedure proc(var b:boolean) : (boolean)
{
	return(b);
}

procedure call()
{
	def var b:boolean;
	(b) = proc(b, b);
	return;
}

